# monorepo-python

./: .gitignore  requirements.txt
.github/workflows/: build-projects-python.yml  main.yml
projecta/: main.py  pyproject.toml
projectb/src/: main.py
projectc/: main.py
