[tool.poetry]
name = "projecta"
version = "0.1.0"
description = "Poetry Lab"
authors = ["Ausberto Medina <ausberto.medina@rsg.com.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
